--- a/src/App.css
+++ b/src/App.css
@@ -112,3 +112,23 @@ form input{
   padding: 10px 20px;
   font-size: 19px;
 }
+.chat-page {
+  width: 100%;
+  height: 60vh;
+  display: flex;
+  align-items: start;  
+  justify-content: start;
+  flex-direction: column;
+  gap: 20px;
+  padding: 10px;
+  margin-top: 20px;
+}
+.user, .ai {
+ width: 90%;
+  padding: 20px 30px;
+  color: white;
+  background-color: rgb(19, 19, 19);
+  border: 2px solid rgba(255, 255, 255, 0.2);
+  border-radius: 25px;
+  font-size: 20px;
+}
